<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_body"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!--
       - The LinearLayout which holds the "meat" of the MainActivity screen.
       - This Layout is necessary to keep the "New" and "Load" Buttons from
       - going off-screen.
      -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- The LinearLayout which holds the main image displayed on the MainActivity screen -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- The main image displayed on the MainActivity screen -->
            <ImageView
                android:id="@+id/main_activity_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/main_activity_img"
                android:contentDescription="@string/access_main_activity_img"/>

        </LinearLayout>

        <!-- The welcome text for the MainActivity -->
        <TextView
            android:text="@string/text_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <!-- The LinearLayout containing the "Cancel" "Delete" and "Load" Buttons -->
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <!-- The "New" Button -->
            <Button android:id="@+id/new_bracket"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_new"
                android:onClick="newBracket" />

            <!-- The "Load" Button -->
            <Button android:id="@+id/load_bracket"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_load"
                android:onClick="loadBracket" />

        </LinearLayout>

    </LinearLayout>

    <!-- This View is used to ensure the ButtonBar does not go off-screen -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
