<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_bracket_scrollview"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.joebeaulieu.rapidbrackets.activities.NewBracket"
    android:windowSoftInputMode="stateHidden">

    <!-- The LinearLayout which holds the "meat" of the NewBracket screen -->
    <LinearLayout
        android:id="@+id/activity_new_bracket_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:windowSoftInputMode="stateHidden">

        <!-- The LinearLayout which holds the "Bracket Name" TextView and EditText -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <!-- The "Bracket Name" TextView -->
            <TextView android:text="@string/text_bracket_name"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/component_vertical_margin"
                android:gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!-- The "Bracket Name" EditText -->
            <EditText android:id="@+id/edit_bracket_name"
                android:hint="@string/hint_enter_name"
                android:singleLine="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxEms="@integer/text_ems"
                android:gravity="end" />

        </LinearLayout>

        <!-- The LinearLayout which holds the "Elimination Type" TextView and Spinner -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <!-- The "Elimination Type" TextView -->
            <TextView android:text="@string/text_elimination_type"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/component_vertical_margin"
                android:gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!-- The "Elimination Type" Spinner -->
            <Spinner android:id="@+id/spinner_elimination"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/component_vertical_margin" />

        </LinearLayout>

        <!--
           - The LinearLayout which holds the "Players" TextView and Spinner;
           - used to select the number of players
          -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <!-- The "Players" TextView -->
            <TextView android:text="@string/text_players"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/component_vertical_margin"
                android:gravity="bottom"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!-- The "Players" Spinner -->
            <Spinner android:id="@+id/spinner_num_players"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/component_vertical_margin"
                android:gravity="center_horizontal"/>

        </LinearLayout>

        <!--
           - This is where the player list is inserted.
           - This includes the player name EditTexts and seed Spinners
          -->
        <include layout="@layout/comp_player_info_entry"/>

        <!-- The LinearLayout containing the "Cancel" and "Create" Buttons -->
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <!-- The "Cancel" Button -->
            <Button android:id="@+id/cancel_bracket"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                android:onClick="cancelBracket" />

            <!-- The "Create" Button -->
            <Button android:id="@+id/create_bracket"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_create"
                android:onClick="createBracket" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
