<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_load_bracket_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.joebeaulieu.rapidbrackets.activities.LoadBracket" >

    <!-- The body of the LoadBracket Activity which is made to never be larger than the screen -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <!--
           - The LinearLayout which holds the "meat" of the LoadBracket screen.
           - This Layout is necessary to keep the "Cancel" "Delete" and "Load"
           - Buttons from going off-screen.
          -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!--
               - The LinearLayout which holds the table from which Brackets are loaded.
               - This Layout is also used to create the white lines separating table
               - columns and rows
              -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <!--
                   - The LinearLayout which is used as a background for the table header
                   - in order to create a boarder around it
                  -->
                <LinearLayout
                    android:id="@+id/table_header_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/table_boarder" >

                    <!-- The table's header -->
                    <TableLayout
                        android:id="@+id/table_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/table_column_dividers"
                        android:layout_marginTop="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:stretchColumns="*" >

                    </TableLayout>

                </LinearLayout>

                <!--
                   - The LinearLayout which is used as a background for the table
                   - in order to create a boarder around it
                  -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/table_boarder">

                    <!--
                       - This LinearLayout is used to properly create
                       - the boarder around the ScrollView
                      -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp" >

                        <!-- Used to scroll through the body of table -->
                        <ScrollView
                            android:id="@+id/table_ScrollView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <!-- The table which displays Brackets from the SQLIteDatabase -->
                                <TableLayout
                                    android:id="@+id/table"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@color/table_column_dividers"
                                    android:stretchColumns="*" >

                                </TableLayout>

                        </ScrollView>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!-- The LinearLayout containing the "Cancel" "Delete" and "Load" Buttons -->
            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:id="@+id/load_bracket_button_bar"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- The "Cancel" Button -->
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_cancel"
                    android:onClick="cancel" />

                <!-- The "Delete" Button -->
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_delete"
                    android:onClick="delete" />

                <!-- The "Load" Button -->
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_load"
                    android:onClick="load" />

            </LinearLayout>

        </LinearLayout>

        <!-- This View is used to ensure the ButtonBar does not go off-screen -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>